added ra prefix integration